--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ body{
     line-height: 36px;
     padding-left: 15px;
 }
+.logo .logo-text:hover{
+    color: orange;
+    transition: all linear 0.3s;
+    cursor: pointer;
+}
 .navigation-bar{
     display: flex;
     justify-content: space-between;
@@ -54,17 +59,92 @@ body{
     line-height: 24px;
     padding-right: 32px;
 }
+.navigation-bar .nav-link a:hover{
+    color: orange;
+    transition: all linear 0.3s;
+}
 .profile-img-div a .profile-img{
     width: 51px;
     height: 51px;
 }
-/* player part css */
+/* main part ---- player part css */
+.hh{
+    display: flex;
+    justify-content: center;
+}
+.main-part{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    margin-top: 30px;
+    width: 870px;
+    border-radius: 5px;
+    padding-top: 30px;
+    padding-left: 30px;
+}
+.main-part .container{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.main-part .container hr{
+   border: 1px solid #D1D1D1; 
+   width: 807px;
+   margin: 30px;
+ 
+}
+
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
+    grid-row-gap: 30px;
+}
+.player{
+    display: flex;
+    align-items: center;
+}
+.player h2{
+    font-size: 18px;
+    color: #000;
+    padding-left: 16px;
+}
+.player-text{
+    font-size: 24px;
+    color: #562EFF;
+    margin-bottom: 40px;
 }
 .players .player img{
     width: 56px;
     height: 56px;
+}
+
+/* main part ---blog part css */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+    padding-bottom: 40px;
+}
+.blog-details{
+    display: flex;
+    align-items: center;
+}
+.blog-details .blog-img img{
+    width: 177px;
+    height: 117px;
+    margin-right: 16px;
+}
+.blog-text h2{
+    font-size: 20px;
+    color: #000;
+    line-height: 32px;
+}
+.blog-text p{
+    font-size: 16px;
+    color: #9F9F9F;
+}
+.blog-text a{
+    font-size: 16px;
+    color: #562EFF;
 }
