--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
     height: 51px;
 }
 /* main part ---- player part css */
-.hh{
+.wrapper{
     display: flex;
     justify-content: center;
 }
@@ -104,10 +104,24 @@ body{
     display: flex;
     align-items: center;
 }
-.player h2{
+.player:hover{
+    background-color: #ed6c4f8c;
+    padding-right: 20px;
+    transition: all linear 0.5s;
+    border-radius: 60px;
+
+}
+.player:hover > img{
+
+    transform: scale(1.2);
+    transition: transform ease-in-out 0.5s; 
+    overflow: hidden;
+}
+.player a{
     font-size: 18px;
     color: #000;
     padding-left: 16px;
+    font-weight: 500;
 }
 .player-text{
     font-size: 24px;
@@ -118,7 +132,6 @@ body{
     width: 56px;
     height: 56px;
 }
-
 /* main part ---blog part css */
 .blogs{
     display: grid;
@@ -130,10 +143,21 @@ body{
     display: flex;
     align-items: center;
 }
-.blog-details .blog-img img{
+.blog-details .blog-img{
     width: 177px;
     height: 117px;
     margin-right: 16px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.blog-details .blog-img img{
+    width: 100%;
+    height: 100%;
+}
+.blog-details .blog-img:hover >img{
+    transform: scale(1.2);
+    transition: transform ease 0.5s;
+    cursor: pointer;
 }
 .blog-text h2{
     font-size: 20px;
@@ -147,4 +171,127 @@ body{
 .blog-text a{
     font-size: 16px;
     color: #562EFF;
+}
+/* course part css */
+.course-section{
+     display: flex;
+    justify-content: center; 
+}
+.course-wrapper{
+    width: 870px;
+    background-color: #fff;
+    margin-top: 26px;
+    border-radius: 5px;
+    padding-left: 30px;
+}
+.course-wrapper h2{
+    font-size: 24px;
+    color: #562EFF;
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    grid-column-gap: 30px;
+}
+.course{
+    width: 252px;
+    height: 270px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 30px rgba(211, 211, 211, 0.4);
+    margin-bottom: 30px;
+}
+.course-pic img{
+    width: 224px;
+    height: 105px;
+    border-radius: 5px;
+    padding: 13px 17px;
+}
+.course-details{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.course-details h3{
+    font-size: 18px;
+
+}
+.course-details p{
+    font-size: 14px;
+    color: #ED6B4F;
+}
+.course-rating{
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 15px;
+    padding-left: 5px;
+}
+.course-rating span{
+    font-size: 14px;
+    color: #a2a2a2a2;
+}
+.rating-icon .fa-star{
+    font-size: 12px;
+     color: #FFC014;
+}
+.fa-star.unfilled{
+    color: #AEAEAE;
+    opacity: 0.25;
+}
+.course-duration{
+    background-color: #f0533044;
+    border-radius: 25px;
+    padding: 2px 10px;
+}
+.course-duration i, .course-duration span{
+    font-size: 14px;
+    color: #FF4A60;
+}
+
+
+/* media css */
+@media only screen and (max-width: 480px) {
+    .wrapper{
+        display: block;
+        /* display: flex; */
+    }
+    .header-style .navigation-bar, .container {
+        width: 100%;
+    }
+    .header-style .navigation-bar .logo img {
+        padding-left: 20px;
+    }
+    .players {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .main-part .container hr {
+        width: 400px;
+    }
+    .blogs {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .courses {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+    }
+    .course-wrapper {
+        width: 100%;
+        background-color: #fff;
+    }
+    .course-wrapper {
+        width: 870px;
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        
+    }
 }
